--- a/public/styles.css
+++ b/public/styles.css
@@ -1,21 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
-.board button{
-    width:100px;
-    height:100px;
-    background-color:lightgray;
-    margin: 1px;
-    border-radius: 50%;
-    border: 4px solid black;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-p{
-    text-align: right;
-    font-size: 2em;
-}
 .center{
     display: flex;
     justify-content: center;
-    font-family: 'Oswald', sans-serif;
+}
+.board{
+border: 1px solid;
+display: flex;
+flex-wrap: wrap;
+height: 120px;
+width: 140px;
+}
+
+.board div{
+height: 20px;
+width: 20px;
+}
+
+.player-one{
+background-color: red;
+border-radius: 10px;
+}
+
+.player-one{
+background-color: blue;
+border-radius: 10px;
 }
