--- a/public/game.css
+++ b/public/game.css
@@ -2,7 +2,7 @@
 .board button{
     width:100px;
     height:100px;
-    background-color: lightgray;
+    background-color: whitesmoke;
     margin: 1px;
     border: 4px solid black;
     border-radius: 50%;
