--- a/public/game.css
+++ b/public/game.css
@@ -2,7 +2,7 @@
 .board button{
     width:100px;
     height:100px;
-    background-color: whitesmoke;
+    background-color: gray;
     margin: 1px;
     border: 4px solid black;
     border-radius: 50%;
@@ -13,4 +13,17 @@ p{
 }
 .words{
     font-family: 'Oswald', sans-serif;
+}
+button {
+    display: flex;
+    justify-content: center;
+    background: yellow;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer; 
+    width: 200px;
+    height: 40px; 
+    font-size: 50px;
+    display: block;
+    margin: 10px auto
 }
